--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                  <h4>Kostensätze</h4>
                  <div class="grid-container cost-inputs-grid">
                     <div class="input-group"><label for="preisWaerme">Preis Wärme (€/kWh)</label><input type="number" id="preisWaerme" value="0.22" step="0.01"></div>
-                    <div class="input-group"><label for="preisKaelte">Preis Kälteenergie (€/kWh)</label><input type="number" id="preisKaelte" value="0.33" step="0.01"></div>
+                    <div class="input-group"><label for="preisKaelte" title="Preis für eine thermische Kilowattstunde Kälte, z.B. bei Fernkälte.">Preis Kälteenergie (€/kWh)</label><input type="number" id="preisKaelte" value="0.33" step="0.01"></div>
                     <div class="input-group"><label for="preisStrom">Preis Strom (€/kWh)</label><input type="number" id="preisStrom" value="0.26" step="0.01"></div>
                 </div>
                 <hr>
@@ -155,10 +155,10 @@
                          <input type="number" id="sfp" value="1.5" step="0.1" min="0">
                      </div>
                       <div class="input-group-inline">
-                        <label>Gesamt-Betriebszeit</label>
+                        <label>Gesamt-Betriebszeit (h/a oder d/a)</label>
                         <div>
-                            <input type="number" id="betriebsstundenGesamt" value="2500" step="10" min="0">
-                             <input type="number" id="betriebstageGesamt" value="365" step="1" min="0">
+                            <input type="number" id="betriebsstundenGesamt" value="8760" step="10" min="0" title="Gesamt-Betriebsstunden pro Jahr">
+                             <input type="number" id="betriebstageGesamt" value="365" step="1" min="0" title="Gesamt-Betriebstage pro Jahr">
                         </div>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
                     <div id="reference-details"><hr><div class="cost-display change reference"><span class="cost-label">Referenzkosten:</span><span class="cost-value" id="kostenReferenz">--</span></div><div class="cost-display change"><span class="cost-label">Δ Kosten:</span><span class="cost-value" id="kostenAenderung">--</span></div><div class="cost-display change parameter"><span class="cost-label">Δ Temperatur:</span><span class="cost-value" id="tempAenderung">--</span></div><div class="cost-display change parameter"><span class="cost-label">Δ Feuchte:</span><span class="cost-value" id="rhAenderung">--</span></div><div class="cost-display change parameter"><span class="cost-label">Δ Volumenstrom:</span><span class="cost-value" id="volumenAenderung">--</span></div></div>
                 </div>
                 <div class="cost-output-section">
-                    <h4>Leistung & Betriebskosten</h4>
+                    <h4>Leistung & Betriebskosten (€/h)</h4>
                     <div class="cost-display power-summary"><span class="cost-label">Gesamtleistung Wärme:</span><span class="cost-value" id="gesamtleistungWaerme">0.00 kW</span></div>
                     <div class="cost-display power-summary"><span class="cost-label">Gesamtleistung Kälte:</span><span class="cost-value" id="gesamtleistungKaelte">0.00 kW</span></div>
                     <hr>
@@ -187,6 +187,14 @@
                     <div class="cost-display total"><span class="cost-label">Gesamtkosten:</span><span class="cost-value" id="kostenGesamt">0.00 €/h</span></div>
                     <hr class="section-divider">
                     <h4 class="annual-cost-header">Jahreskosten-Schätzung (Richtwert)</h4>
+                    <div class="input-group">
+                        <label for="stundenHeizen">Heizstunden pro Jahr (für therm. Energie)</label>
+                        <input type="number" id="stundenHeizen" value="1800" step="10" min="0">
+                    </div>
+                    <div class="input-group">
+                        <label for="stundenKuehlen">Kühlstunden pro Jahr (für therm. Energie)</label>
+                        <input type="number" id="stundenKuehlen" value="600" step="10" min="0">
+                    </div>
                     <p class="info-text">Hinweis: Die Schätzung extrapoliert die für den aktuellen Auslegungsfall berechnete Leistung auf die angegebenen Jahresstunden.</p>
                     <div class="cost-display"><span class="cost-label">Jahreskosten Wärme:</span><span class="cost-value" id="jahreskostenWaerme">0 €/a</span></div>
                     <div class="cost-display"><span class="cost-label">Jahreskosten Kälte:</span><span class="cost-value" id="jahreskostenKaelte">0 €/a</span></div>
