--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <div class="slider-group"><label>Volumenstrom: <span id="volumenstromLabel">5000</span> m³/h</label><input type="range" id="volumenstromSlider" min="2500" max="7500" step="100" value="5000"></div>
                      <div class="slider-group"><label>Zuluft-Temperatur: <span id="tempZuluftLabel">20.0</span> °C</label><input type="range" id="tempZuluftSlider" min="14" max="26" step="0.1" value="20.0"></div>
                      <div class="slider-group" id="rhZuluftSliderGroup"><label>Zuluft-Rel. Feuchte: <span id="rhZuluftLabel">50.0</span> %</label><input type="range" id="rhZuluftSlider" min="30" max="70" step="0.5" value="50.0"></div>
-                    <div id="reference-details" class="invisible"><hr><div class="cost-display change reference"><span class="cost-label">Referenzkosten:</span><span class="cost-value" id="kostenReferenz">--</span></div><div class="cost-display change"><span class="cost-label">Δ Kosten:</span><span class="cost-value" id="kostenAenderung">--</span></div><div class="cost-display change parameter"><span class="cost-label">Δ Temperatur:</span><span class="cost-value" id="tempAenderung">--</span></div><div class="cost-display change parameter"><span class="cost-label">Δ Feuchte:</span><span class="cost-value" id="rhAenderung">--</span></div><div class="cost-display change parameter"><span class="cost-label">Δ Volumenstrom:</span><span class="cost-value" id="volumenAenderung">--</span></div></div>
+                    <div id="reference-details"><hr><div class="cost-display change reference"><span class="cost-label">Referenzkosten:</span><span class="cost-value" id="kostenReferenz">--</span></div><div class="cost-display change"><span class="cost-label">Δ Kosten:</span><span class="cost-value" id="kostenAenderung">--</span></div><div class="cost-display change parameter"><span class="cost-label">Δ Temperatur:</span><span class="cost-value" id="tempAenderung">--</span></div><div class="cost-display change parameter"><span class="cost-label">Δ Feuchte:</span><span class="cost-value" id="rhAenderung">--</span></div><div class="cost-display change parameter"><span class="cost-label">Δ Volumenstrom:</span><span class="cost-value" id="volumenAenderung">--</span></div></div>
                 </div>
                 <div class="cost-output-section">
                     <h4>Leistung & Betriebskosten (€/h)</h4>
@@ -188,23 +188,21 @@
                     <hr>
                     <button id="setReferenceBtn">Referenz festlegen</button>
                     <hr class="section-divider">
-                    <div id="annual-cost-estimation">
-                        <h4 class="annual-cost-header">Jahreskosten-Schätzung (Richtwert)</h4>
-                        <div class="input-group">
-                            <label for="stundenHeizen">Heizstunden pro Jahr (für therm. Energie)</label>
-                            <input type="number" id="stundenHeizen" value="1800" step="10" min="0">
-                        </div>
-                        <div class="input-group">
-                            <label for="stundenKuehlen">Kühlstunden pro Jahr (für therm. Energie)</label>
-                            <input type="number" id="stundenKuehlen" value="600" step="10" min="0">
-                        </div>
-                        <p class="info-text">Hinweis: Die Schätzung extrapoliert die für den aktuellen Auslegungsfall berechnete Leistung auf die angegebenen Jahresstunden.</p>
-                        <div class="cost-display"><span class="cost-label">Jahreskosten Wärme:</span><span class="cost-value" id="jahreskostenWaerme">0 €/a</span></div>
-                        <div class="cost-display"><span class="cost-label">Jahreskosten Kälte:</span><span class="cost-value" id="jahreskostenKaelte">0 €/a</span></div>
-                        <div class="cost-display fan-cost-display hidden"><span class="cost-label">Jahreskosten Ventilator:</span><span class="cost-value" id="jahreskostenVentilator">0 €/a</span></div>
-                        <hr>
-                        <div class="cost-display total"><span class="cost-label">Gesamtkosten / Jahr:</span><span class="cost-value" id="jahreskostenGesamt">0 €/a</span></div>
+                    <h4 class="annual-cost-header">Jahreskosten-Schätzung (Richtwert)</h4>
+                    <div class="input-group">
+                        <label for="stundenHeizen">Heizstunden pro Jahr (für therm. Energie)</label>
+                        <input type="number" id="stundenHeizen" value="1800" step="10" min="0">
                     </div>
+                    <div class="input-group">
+                        <label for="stundenKuehlen">Kühlstunden pro Jahr (für therm. Energie)</label>
+                        <input type="number" id="stundenKuehlen" value="600" step="10" min="0">
+                    </div>
+                    <p class="info-text">Hinweis: Die Schätzung extrapoliert die für den aktuellen Auslegungsfall berechnete Leistung auf die angegebenen Jahresstunden.</p>
+                    <div class="cost-display"><span class="cost-label">Jahreskosten Wärme:</span><span class="cost-value" id="jahreskostenWaerme">0 €/a</span></div>
+                    <div class="cost-display"><span class="cost-label">Jahreskosten Kälte:</span><span class="cost-value" id="jahreskostenKaelte">0 €/a</span></div>
+                    <div class="cost-display fan-cost-display hidden"><span class="cost-label">Jahreskosten Ventilator:</span><span class="cost-value" id="jahreskostenVentilator">0 €/a</span></div>
+                    <hr>
+                    <div class="cost-display total"><span class="cost-label">Gesamtkosten / Jahr:</span><span class="cost-value" id="jahreskostenGesamt">0 €/a</span></div>
                 </div>
             </div>
         </div>
