--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                     </label>
                 </div>
                 <div class="input-group" id="kuehlmodusWrapper">
-                    <label for="kuehlmodus">Kühlmodus</label>
-                    <select id="kuehlmodus">
-                        <option value="dehumidify" selected>Kühlen & Entfeuchten</option>
-                        <option value="sensible">Nur Kühlen (sensibel)</option>
-                    </select>
+                    <label>Kühlmodus</label>
+                    <div class="radio-group">
+                        <label><input type="radio" name="kuehlmodus" value="dehumidify" checked> Kühlen & Entfeuchten</label>
+                        <label><input type="radio" name="kuehlmodus" value="sensible"> Nur Kühlen (sensibel)</label>
+                    </div>
                 </div>
             </div>
             <hr>
